Adding anchorScroll + location services in GithubViewer with timer project

--- a/GithubViewer with Timer/userdetails.html
+++ b/GithubViewer with Timer/userdetails.html
@@ -1,4 +1,4 @@
-<div>
+<div id="userDetails">
   <h2>{{user.name}}</h2>
   <h4>{{user.email}}</h4>
   <img src="http://gravatar.com/avatar/{{user.gravatar_id}}" style="width:100px" title="{{user.name}}">Order:
@@ -12,7 +12,7 @@
 
 
 <br>
-<table>
+<table id="t">
   <thead>
     <tr>
       <th>Name</th>
